--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "bcryptjs": "^2.4.3"
   }
 }
